2013-06-18 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fixed the urls and forms to
	set the filters.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-17 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed to create networkmaps
	with the same name (for example users with diferent groups ACL).
	
	Fixes: #2285
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-17 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_commands.php: fixed the duplicated the rows
	and did'nt hide the macros field rows.
	
	Fixes: #2294

2013-06-17 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions.php: fixed in the function "get_snmpwalk" the
	lost global $config var.
	
	Fixes: #2295

2013-06-14 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/plugin_registration.php: fixed the url of module
	library and now show ever the form to upload more plugins.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fix layout issue

	* operation/events/events.build_table.php: Hide checkbox column
	in read only view

	* operation/events/events_list.php: Hide save filter button
	when user has only ER ACLs permission

	* general/login_page.php: Fix width and height of the 
	login error modal win

	* operation/agentes/stat_win.php: Enable the show events
	filter in replication mode when show local events is enabled

2013-06-13 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_snmp.php: changed the PHP function to execute
	command and now get the error string or return true if it runs fine.
	
	* godmode/snmpconsole/snmp_trap_generator.php: show the error when
	fail to call snmptrap, and show error when occurs.
	
	Fixes: #2270
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-13 Mario Pulido <mario.pulido@artica.es>
	
	* images/help/actions.png,